--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "html-react-parser": "^0.4.0",
+    "html-webpack-include-assets-plugin": "^1.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "husky": "^0.11.9",
     "mocha": "^3.0.2",
     "prop-types": "^15.6.0",
